@@ -1,3 +1,8 @@
+2009-02-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Formating of selected text
+
+
 2009-02-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Added a menu entry for easy formating of text
